--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.5.0",
     "play-sound": "^1.1.6",
     "playwright": "^1.52.0",
+    "readline-sync": "^1.4.10",
     "twilio": "^5.5.2"
   }
 }
