Better link in console.log

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "play-sound": "^1.1.6",
     "playwright": "^1.52.0",
     "readline-sync": "^1.4.10",
+    "terminal-link": "^4.0.0",
     "twilio": "^5.5.2"
   }
 }
